
SET(PROJECT_NAME "RayTracer")
PROJECT( ${PROJECT_NAME} )
CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 
SET(CMAKE_DISABLE_SOURCE_CHANGES ON)
SET(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

SET(CMAKE_CXX_STANDARD 17)


FILE( GLOB SRCS 
 "src/*.cc" 
 "src/*.h" 
)

include_directories("${CMAKE_SOURCE_DIR}\\gmtl")
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS} )